Feat : programmers 배열 만들기 6